[package]
name = "aoc2022"
version = "0.1.0"
authors = ["Miquel van Smoorenburg <mike@langeraar.net>"]
edition = "2021"

[workspace]

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
jemallocator = "0.5.0"

runner = { path = "runner", version = "0.1.0" }
day-01 = { path = "day-01-calorie-counting", version = "0.1.0" }
day-02 = { path = "day-02-rock-paper-scissors", version = "0.1.0" }
day-03 = { path = "day-03-rucksack-reorganization", version = "0.1.0" }
day-04 = { path = "day-04-camp-cleanup", version = "0.1.0" }
day-05 = { path = "day-05-supply-stacks", version = "0.1.0" }
day-06 = { path = "day-06-tuning-trouble", version = "0.1.0" }
day-07 = { path = "day-07-no-space-left-on-device", version = "0.1.0" }
day-08 = { path = "day-08-treetop-tree-house", version = "0.1.0" }
day-09 = { path = "day-09-rope-bridge", version = "0.1.0" }
day-10 = { path = "day-10-cathode-ray-tube", version = "0.1.0" }
day-11 = { path = "day-11-monkey-in-the-middle", version = "0.1.0" }
day-12 = { path = "day-12-hill-climbing-algorithm", version = "0.1.0" }
day-13 = { path = "day-13-distress-signal", version = "0.1.0" }
